--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=doctorsystem
-spring.datasource.url=jdbc:postgresql://localhost:5432/SpringStarter
+spring.datasource.url=jdbc:postgresql://localhost:5432/Ajay
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=postgres
-spring.datasource.password=Muni@1234
+spring.datasource.password=12345
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
